<resources>
    <string name="app_name">LegacyHelper</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_legacy">New Legacy</string>
    <string name="legacy_name">Legacy Name</string>
    <string name="create_legacy">Create Legacy</string>
    <string name="edit_legacy">Edit Legacy</string>
    <string name="delete_legacy">Delete Legacy</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_new_legacy">New Legacy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_section_sims">Sims</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="founder">Founder</string>
    <string name="primary_spouse">Primary Spouse</string>
    <string name="blood_relative">Blood Relative</string>
    <string name="spouse">Spouse</string>
    <string name="select_all_laws">Select all laws</string>
    <string name="gender_law">Gender Law</string>
    <string name="select_gender_law">Select Gender Law</string>
    <string name="strict_matriarchal_gender_law">Strict Matriarchal</string>
    <string name="matriarchal_gender_law">Matriarchal</string>
    <string name="strict_patriarchal_gender_law">Strict Patriarchal</string>
    <string name="patriarchal_gender_law">Patriarchal</string>
    <string name="strict_equality_gender_law">Strict Equality</string>
    <string name="equality_gender_law">Equality</string>
    <string name="bloodline_law">Bloodline Law</string>
    <string name="select_bloodline_law">Select Bloodline Law</string>
    <string name="strict_traditional_bloodline_law">Strict Traditional</string>
    <string name="traditional_bloodline_law">Traditional</string>
    <string name="modern_bloodline_law">Modern</string>
    <string name="foster_bloodline_law">Foster</string>
    <string name="strict_foster_bloodline_law">Strict Foster</string>
    <string name="heir_law">Heir Law</string>
    <string name="select_heir_law">Select Heir Law</string>
    <string name="first_born_heir_law">First Born</string>
    <string name="last_born_heir_law">Last Born</string>
    <string name="living_will_heir_law">Living Will</string>
    <string name="merit_heir_law">Merit</string>
    <string name="strength_heir_law">Strength</string>
    <string name="random_heir_law">Random</string>
    <string name="exemplar_heir_law">Exemplar</string>
    <string name="democracy_heir_law">Democracy</string>
    <string name="exemplar_trait">Exemplar Trait</string>
    <string name="charisma_skill">Charisma</string>
    <string name="comedy_skill">Comedy</string>
    <string name="cooking_skill">Cooking</string>
    <string name="creativity_skill">Creativity</string>
    <string name="fishing_skill">Fishing</string>
    <string name="fitness_skill">Fitness</string>
    <string name="gardening_skill">Gardening</string>
    <string name="gourmet_cooking_skill">Gourmet Cooking</string>
    <string name="guitar_skill">Guitar</string>
    <string name="handiness_skill">Handiness</string>
    <string name="logic_skill">Logic</string>
    <string name="mental_skill">Mental</string>
    <string name="mischief_skill">Mischief</string>
    <string name="mixology_skill">Mixology</string>
    <string name="motor_skill">Motor</string>
    <string name="painting_skill">Painting</string>
    <string name="piano_skill">Piano</string>
    <string name="programming_skill">Programming</string>
    <string name="social_skill">Social</string>
    <string name="rocket_science_skill">Rocket Science</string>
    <string name="video_gaming_skill">Video Gaming</string>
    <string name="violin_skill">Violin</string>
    <string name="writing_skill">Writing</string>
    <string name="m_active_trait">Active</string>
    <string name="f_active_trait">Active</string>
    <string name="m_ambitious_trait">Ambitious</string>
    <string name="f_ambitious_trait">Ambitious</string>
    <string name="m_art_lover_trait">Art Lover</string>
    <string name="f_art_lover_trait">Art Lover</string>
    <string name="m_bookworm_trait">Bookworm</string>
    <string name="f_bookworm_trait">Bookworm</string>
    <string name="m_bro_trait">Bro</string>
    <string name="f_bro_trait">Bro</string>
    <string name="m_cheerful_trait">Cheerful</string>
    <string name="f_cheerful_trait">Cheerful</string>
    <string name="m_childish_trait">Childish</string>
    <string name="f_childish_trait">Childish</string>
    <string name="m_clumsy_trait">Clumsy</string>
    <string name="f_clumsy_trait">Clumsy</string>
    <string name="m_creative_trait">Creative</string>
    <string name="f_creative_trait">Creative</string>
    <string name="m_evil_trait">Evil</string>
    <string name="f_evil_trait">Evil</string>
    <string name="m_family_oriented_trait">Family-Oriented</string>
    <string name="f_family_oriented_trait">Family-Oriented</string>
    <string name="m_foodie_trait">Foodie</string>
    <string name="f_foodie_trait">Foodie</string>
    <string name="m_geek_trait">Geek</string>
    <string name="f_geek_trait">Geek</string>
    <string name="m_genius_trait">Genius</string>
    <string name="f_genius_trait">Genius</string>
    <string name="m_gloomy_trait">Gloomy</string>
    <string name="f_gloomy_trait">Gloomy</string>
    <string name="m_glutton_trait">Glutton</string>
    <string name="f_glutton_trait">Glutton</string>
    <string name="m_good_trait">Good</string>
    <string name="f_good_trait">Good</string>
    <string name="m_goofball_trait">Goofball</string>
    <string name="f_goofball_trait">Goofball</string>
    <string name="m_hates_children_trait">Hates Children</string>
    <string name="f_hates_children_trait">Hates Children</string>
    <string name="m_hot_headed_trait">Hot-Headed</string>
    <string name="f_hot_headed_trait">Hot-Headed</string>
    <string name="m_insane_trait">Insane</string>
    <string name="f_insane_trait">Insane</string>
    <string name="m_lazy_trait">Lazy</string>
    <string name="f_lazy_trait">Lazy</string>
    <string name="m_loner_trait">Loner</string>
    <string name="f_loner_trait">Loner</string>
    <string name="m_loves_outdoors_trait">Loves Outdoors</string>
    <string name="f_loves_outdoors_trait">Loves Outdoors</string>
    <string name="m_materialistic_trait">Materialistic</string>
    <string name="f_materialistic_trait">Materialistic</string>
    <string name="m_mean_trait">Mean</string>
    <string name="f_mean_trait">Mean</string>
    <string name="m_music_lover_trait">Music Lover</string>
    <string name="f_music_lover_trait">Music Lover</string>
    <string name="m_neat_trait">Neat</string>
    <string name="f_neat_trait">Neat</string>
    <string name="m_noncommittal_trait">Noncommittal</string>
    <string name="f_noncommittal_trait">Noncommittal</string>
    <string name="m_outgoing_trait">Outgoing</string>
    <string name="f_outgoing_trait">Outgoing</string>
    <string name="m_perfectionist_trait">Perfectionist</string>
    <string name="f_perfectionist_trait">Perfectionist</string>
    <string name="m_romantic_trait">Romantic</string>
    <string name="f_romantic_trait">Romantic</string>
    <string name="m_self_assured_trait">Self-Assured</string>
    <string name="f_self_assured_trait">Self-Assured</string>
    <string name="m_slob_trait">Slob</string>
    <string name="f_slob_trait">Slob</string>
    <string name="m_snob_trait">Snob</string>
    <string name="f_snob_trait">Snob</string>
    <string name="m_athletic_body_builder_aspiration">Athletic: Body Builder</string>
    <string name="f_athletic_body_builder_aspiration">Athletic: Body Builder</string>
    <string name="m_creativity_artistic_prodigy_aspiration">Creativity: Artistic Prodigy</string>
    <string name="f_creativity_artistic_prodigy_aspiration">Creativity: Artistic Prodigy</string>
    <string name="m_creativity_bestselling_author_aspiration">Creativity: Bestselling Author</string>
    <string name="f_creativity_bestselling_author_aspiration">Creativity: Bestselling Author</string>
    <string name="m_creativity_musical_genius_aspiration">Creativity: Musical Genius</string>
    <string name="f_creativity_musical_genius_aspiration">Creativity: Musical Genius</string>
    <string name="m_creativity_painter_extraordinaire_aspiration">Creativity: Painter Extraordinaire</string>
    <string name="f_creativity_painter_extraordinaire_aspiration">Creativity: Painter Extraordinaire</string>
    <string name="m_deviance_chief_of_mischief_aspiration">Deviance: Chief of Mischief</string>
    <string name="f_deviance_chief_of_mischief_aspiration">Deviance: Chief of Mischief</string>
    <string name="m_deviance_public_enemy_aspiration">Deviance: Public Enemy</string>
    <string name="f_deviance_public_enemy_aspiration">Deviance: Public Enemy</string>
    <string name="m_family_big_happy_family_aspiration">Family: Big Happy Family</string>
    <string name="f_family_big_happy_family_aspiration">Family: Big Happy Family</string>
    <string name="m_family_successful_lineage_aspiration">Family: Successful Lineage</string>
    <string name="f_family_successful_lineage_aspiration">Family: Successful Lineage</string>
    <string name="m_food_master_chef_aspiration">Food: Master Chef</string>
    <string name="f_food_master_chef_aspiration">Food: Master Chef</string>
    <string name="m_food_master_mixologist_aspiration">Food: Master Mixologist</string>
    <string name="f_food_master_mixologist_aspiration">Food: Master Mixologist</string>
    <string name="m_fortune_fabulously_rich_aspiration">Fortune: Fabulously Rich</string>
    <string name="f_fortune_fabulously_rich_aspiration">Fortune: Fabulously Rich</string>
    <string name="m_fortune_mansion_baron_aspiration">Fortune: Mansion Baron</string>
    <string name="f_fortune_mansion_baron_aspiration">Fortune: Mansion Baroness</string>
    <string name="m_knowledge_computer_whiz_aspiration">Knowledge: Computer Whiz</string>
    <string name="f_knowledge_computer_whiz_aspiration">Knowledge: Computer Whiz</string>
    <string name="m_knowledge_nerd_brain_aspiration">Knowledge: Nerd Brain</string>
    <string name="f_knowledge_nerd_brain_aspiration">Knowledge: Nerd Brain</string>
    <string name="m_knowledge_renaissance_sim_aspiration">Knowledge: Renaissance Sim</string>
    <string name="f_knowledge_renaissance_sim_aspiration">Knowledge: Renaissance Sim</string>
    <string name="m_love_hopeful_romantic_aspiration">Love: Hopeful Romantic</string>
    <string name="f_love_hopeful_romantic_aspiration">Love: Hopeful Romantic</string>
    <string name="m_love_soulmate_aspiration">Love: Soulmate</string>
    <string name="f_love_soulmate_aspiration">Love: Soulmate</string>
    <string name="m_mental_whiz_kid_aspiration">Mental: Whiz Kid</string>
    <string name="f_mental_whiz_kid_aspiration">Mental: Whiz Kid</string>
    <string name="m_motor_rambunctious_scamp_aspiration">Motor: Rambunctious Scamp</string>
    <string name="f_motor_rambunctious_scamp_aspiration">Motor: Rambunctious Scamp</string>
    <string name="m_nature_angling_ace_aspiration">Nature: Angling Ace</string>
    <string name="f_nature_angling_ace_aspiration">Nature: Angling Ace</string>
    <string name="m_nature_freelance_botanist_aspiration">Nature: Freelance Botanist</string>
    <string name="f_nature_freelance_botanist_aspiration">Nature: Freelance Botanist</string>
    <string name="sim_type">Type</string>
    <string name="sim_name">Name</string>
    <string name="sim_traits">Traits</string>
    <string name="sim_sex">Sex</string>
    <string name="sim_aspiration">Aspiration</string>
    <string name="sim_age">Age</string>
    <string name="species_law">Species Law</string>
</resources>